# market_maker

./: .gitignore  README.md  main.py  test.ipynb  test.py
bybit/: Cargo.toml
bybit/src/: main.rs
src/: sharedstate.py
src/exchanges/binance/: client.py  data.py  endpoints.py
src/exchanges/binance/websockets/: orderbook.py  public.py  trades.py
src/exchanges/common/: localorderbook.py
src/indicators/: bbw.py  ema.py
src/strategy/: inventory.py
src/strategy/features/: bba_imbalance.py  mark_spread.py  ob_imbalance.py  trades_imbalance.py
src/utils/: rounding.py
testing/: test.py.ipynb
