[package]
name = "bybit"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.19", features = ["native-tls"]}
futures-util = "0.3.30"
url = "2.2.0"
serde_json = "1.0"
serde = {version = "1.0.204", features = ["derive"]}